--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,14 @@ h1 {
     color: blueviolet;
     text-align: center;
 }
+.projects{
+    display:flex;
+    flex-wrap:wrap;
+}
+.project{
+    width: 30%;
+    margin: 10px;
+    padding: 20px 10px;
+    background: lightyellow;
+    border-radius: 25%;
+}
