--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body {
-    background:#D1CDF9;
+    background:#e1cdf9;
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    color: blueviolet;
+    color: rgb(165, 71, 252);
     text-align: center;
 }
 .projects{
@@ -14,6 +14,6 @@ h1 {
     width: 30%;
     margin: 10px;
     padding: 20px 10px;
-    background: lightyellow;
+    background: rgb(255, 255, 143);
     border-radius: 25%;
 }
