--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,11 @@ h1 {
     background: rgb(255, 255, 143);
     border-radius: 15%;
 }
+.project img{
+    width:300px;
+    height: 300px;
+    margin: 10px;
+    border: 2px solid rgb(140, 89, 187);
+    display: block;
+    margin: auto;
+}
