--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ h1 {
     color: rgb(140, 89, 187);
     text-align: center;
 }
+h3 {
+    color: rgb(140, 89, 187);
+    text-align: center;
+}
 .projects{
     display:flex;
     flex-wrap:wrap;
