--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background:#e1cdf9;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 h1 {
     color: rgb(140, 89, 187);
